# blesta_sdk

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CLI_USAGE.md  LICENSE  MANIFEST.in  MCP_USAGE.md  README.md  SDK_USAGE.md  blesta_cli.py  pyproject.toml  requirements-test.txt
.claude/: settings.json
.github/workflows/: publish.yml  schema-refresh.yml  test.yml
benchmarks/: bench_transactions_live.py  conftest.py  test_bench_async_client.py  test_bench_client.py  test_bench_concurrency.py  test_bench_response.py
docs/: migration.md
docs/qc/: 2026-05-27-qc-report.md  code-quality-audit.md
docs/reviews/: 2026-05-27-code-review.md  hardening-sprint-final-report.md
examples/: examples.sh
schemas/: blesta_api_schema.json  blesta_plugin_schema.json
src/blesta_sdk/: __init__.py  _async_client.py  _cli.py  _client.py  _dateutil.py  _discovery.py  _env_config.py  _exceptions.py  _pagination.py  _redaction.py  _response.py  _retry.py  _validation.py
src/blesta_sdk/api/: __init__.py  blesta_request.py
src/blesta_sdk/cli/: __init__.py  app.py  blesta_cli.py  formatters.py
src/blesta_sdk/cli/commands/: __init__.py  call.py  discover.py  extract.py  report.py
src/blesta_sdk/core/: __init__.py  async_client.py  blesta_response.py  client.py  config.py  dateutil.py  errors.py  pagination.py  redaction.py  response.py  retry.py  validation.py
src/blesta_sdk/discovery/: __init__.py  registry.py
src/blesta_sdk/mcp/: __init__.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/blesta_sdk/schemas/: blesta_api_schema.json  blesta_plugin_schema.json
tests/: conftest.py  test_async_client.py  test_blesta_cli.py  test_blesta_sdk.py  test_classify.py  test_cli_commands.py  test_discovery.py  test_env_config.py  test_mcp.py  test_plugin_schema.py  test_redaction.py  test_response_edge_cases.py  test_retry.py  test_schema.py
tools/: _classify.py  extract_plugin_schema.py  extract_schema.py
utils/: examples.py
