[project]
name = "blesta_sdk"
version = "0.5.0"
description = "Python SDK and CLI for the Blesta billing platform REST API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "jwogrady" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[project.scripts]
blesta = "blesta_sdk._cli:cli"

[project.urls]
Repository = "https://github.com/Status26/blesta_sdk"
Changelog = "https://github.com/Status26/blesta_sdk/blob/main/CHANGELOG.md"
Issues = "https://github.com/Status26/blesta_sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    "/.gitignore",
    ".python-version",
    ".coverage",
    "CLAUDE.md",
    "tests/",
    "examples/",
    "uv.lock",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pandas>=1.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that make live API calls (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.uv]
index-url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
