[project]
name = "blesta_sdk"
version = "0.3.0"
description = "Python SDK and CLI for the Blesta billing platform REST API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "jwogrady" }
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
cli = ["python-dotenv>=1.2.1"]
async = ["httpx>=0.27"]

[project.scripts]
blesta = "blesta_sdk._cli:cli"

[project.urls]
Repository = "https://github.com/jwogrady/blesta_sdk"
Changelog = "https://github.com/jwogrady/blesta_sdk/blob/master/CHANGELOG.md"
Issues = "https://github.com/jwogrady/blesta_sdk/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".github/",
    "/.gitignore",
    ".python-version",
    ".coverage",
    ".vscode/",
    "coverage.json",
    "CLAUDE.md",
    "tests/",
    "benchmarks/",
    "examples/",
    "uv.lock",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx>=0.27",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.4",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that make live API calls (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.uv]
index-url = "https://pypi.org/simple/"
publish-url = "https://upload.pypi.org/legacy/"
